--- a/GUIDCommandLineConverter/.project
+++ b/GUIDCommandLineConverter/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GUIDConverter</name>
+	<name>GUIDCommandLineConverter</name>
 	<comment></comment>
 	<projects>
 	</projects>
