--- a/GUIDCommandLineConverter/.classpath
+++ b/GUIDCommandLineConverter/.classpath
@@ -5,9 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.4.jar"/>
-	<classpathentry kind="lib" path="lib/super-csv-java8/lib/super-csv-2.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/super-csv-java8/super-csv-java8-2.4.0-javadoc.jar"/>
-	<classpathentry kind="lib" path="lib/super-csv-java8/super-csv-java8-2.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="lib/super-csv-java8/super-csv-java8-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/opencsv-3.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
